--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -118,7 +118,7 @@
                 </div>
             </a>
 
-            <a href="/service-types" class="card text-decoration-none text-dark card-hover">
+            <a href="/service_types" class="card text-decoration-none text-dark card-hover">
                 <div class="card-body text-center">
                     <i class="fas fa-concierge-bell card-icon"></i>
                     <h3>Услуги</h3>
