--- a/src/main/resources/templates/service_types/view.html
+++ b/src/main/resources/templates/service_types/view.html
@@ -15,7 +15,7 @@
       <p><strong>Длительность:</strong> <span th:text="${serviceType.durationHours} + ' ч'"></span></p>
     </div>
   </div>
-  <a th:href="@{/service-types}" class="btn btn-secondary mt-3">Назад к списку</a>
+  <a th:href="@{/service_types}" class="btn btn-secondary mt-3">Назад к списку</a>
 </div>
 </body>
 </html>
