--- a/src/main/resources/templates/clients/form.html
+++ b/src/main/resources/templates/clients/form.html
@@ -9,10 +9,9 @@
 <div class="container mt-4">
   <h1 th:text="${client.id} ? 'Изменить клиента' : 'Новый клиент'"></h1>
   <form th:action="@{/clients}" th:object="${client}" method="post">
-    <div class="mb-3">
+    <input type="hidden" th:field="*{id}">
       <label class="form-label">ФИО:</label>
       <input type="text" class="form-control" th:field="*{fullName}" required>
-    </div>
     <div class="mb-3">
       <label class="form-label">Телефон:</label>
       <input type="tel" class="form-control" th:field="*{phone}" required>
