--- a/src/main/resources/templates/service_types/list.html
+++ b/src/main/resources/templates/service_types/list.html
@@ -2,13 +2,13 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Услуги</title>
+    <title>Список услуг</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
 <div class="container mt-4">
     <h1>Список услуг</h1>
-    <a th:href="@{/service-types/new}" class="btn btn-primary mb-3">Добавить услугу</a>
+    <a th:href="@{/service_types/new}" class="btn btn-primary mb-3">Добавить услугу</a>
     <table class="table">
         <thead>
         <tr>
@@ -23,16 +23,12 @@
         <tr th:each="serviceType : ${serviceTypes}">
             <td th:text="${serviceType.id}"></td>
             <td th:text="${serviceType.name}"></td>
-            <td th:text="${serviceType.description}"></td>
+            <td th:text="${serviceType.description ?: 'Нет описания'}"></td>
             <td th:text="${serviceType.durationHours}"></td>
             <td>
-                <a th:href="@{/service-types/{id}/edit(id=${serviceType.id})}" class="btn btn-warning">Изменить</a>
-                <a th:href="@{/service-types/{id}/delete(id=${serviceType.id})}" class="btn btn-danger">Удалить</a>
-            </td>
-            <td>
-                <a th:href="@{/clients/{id}(id=${client.id})}" class="btn btn-info">Просмотр</a>
-                <a th:href="@{/clients/{id}/edit(id=${client.id})}" class="btn btn-warning">Изменить</a>
-                <a th:href="@{/clients/{id}/delete(id=${client.id})}" class="btn btn-danger">Удалить</a>
+                <a th:href="@{/service_types/{id}/edit(id=${serviceType.id})}" class="btn btn-warning">Изменить</a>
+                <a th:href="@{/service_types/{id}/delete(id=${serviceType.id})}" class="btn btn-danger">Удалить</a>
+                <a th:href="@{/service_types/{id}(id=${serviceType.id})}" class="btn btn-info">Просмотр</a>
             </td>
         </tr>
         </tbody>
