added schedule, calendar of sessions, modified session controller - integrates to schedule (if employee is busy u cant create photo session with him in that time and cant update already acceptable object, to unacceptable)
TODO: integrate schedule as calendar in all employee obj

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -91,6 +91,10 @@
                 <h4 class="mb-0">Сотрудники</h4>
                 <p class="mb-0" th:text="${employeeCount} ?: '0'">0</p>
             </div>
+            <div>
+                <h4 class="mb-0">Расписание</h4>
+                <p class="mb-0" th:text="${scheduleCount} ?: '0'">0</p>
+            </div>
         </div>
 
         <div class="dashboard-cards">
